# urgency-flow-hackwashu-2024

./: .gitignore  README.md
backend/: README.md  pyproject.toml  vercel.json
backend/api/: views.py
backend/backend/: settings.py
backend/model/src/: predict.py
frontend/: index.html
frontend/static/js/: patient.js
